--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^5.1.0",
     "openai": "^4.97.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vite": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
