--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
-    "version": 2,
-    "routes": [
-      { "src": "/api/(.*)", "dest": "/api/$1" }
-    ]
-  }
+  "version": 2,
+  "routes": [
+    { 
+      "src": "/api/(.*)", 
+      "dest": "/api/$1" 
+    }
+  ]
+}
   
