--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
   "version": 2,
   "routes": [
-    { 
-      "src": "/api/(.*)", 
-      "dest": "/api/$1" 
-    }
+    {"src": "/api/(.*)", "dest":"/api/$1" },
+    {"src": "/(.*)", "dest": "/dist/$1" }
   ]
 }
   
