--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,19 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/callback.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    {"src": "/api/(.*)", "dest":"/api/$1" },
-    {"src": "/(.*)", "dest": "/dist/$1" }
+    {
+      "src": "/api/(.*)",
+      "dest": "api/callback.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
-  
