--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,8 @@
 {
-  "version": 2,
   "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    }
+    { "src": "package.json", "use": "@vercel/static-build" }
   ],
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "https://personafm-production.up.railway.app/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
-}
+} 
