--- a/vercel.json
+++ b/vercel.json
@@ -8,13 +8,6 @@
     }
   ],
   "rewrites": [
-    {
-      "source": "/callback",
-      "destination": "/"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
