--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,17 @@
     }
   ],
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/callback",
+      "destination": "https://personafm-production.up.railway.app/callback"
+    },
+    {
+      "source": "/api/(.*)",
+      "destination": "https://personafm-production.up.railway.app/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
